--- a/sc-f/pom.xml
+++ b/sc-f/pom.xml
@@ -26,6 +26,7 @@
     <modules>
         <module>eureka-server</module>
         <module>service-hi</module>
+        <module>service-ribbon</module>
     </modules>
 
     <dependencies>
