--- a/sc-f/pom.xml
+++ b/sc-f/pom.xml
@@ -27,6 +27,7 @@
         <module>eureka-server</module>
         <module>service-hi</module>
         <module>service-ribbon</module>
+        <module>service-feign</module>
     </modules>
 
     <dependencies>
